att cubo e add efeito neon

--- a/index.html
+++ b/index.html
@@ -4,115 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CUBO</title>
+    <title>Cubo 3D neon</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container-cube">
-        <div class="cube">
-            <div class="cube-side cube-side-front">
-                <div class="block-1">
-                    <div class="block-1-front">1</div>
-                    <div class="block-2-front">2</div>
-                    <div class="block-3-front">3</div>
-                </div>
-                <div class="block-2">
-                    <div class="block-4-front">4</div>
-                    <div class="block-5-front">5</div>
-                    <div class="block-6-front">6</div>
-                </div>
-                <div class="block-3">
-                    <div class="block-7-front">7</div>
-                    <div class="block-8-front">8</div>
-                    <div class="block-9-front">9</div>
-                </div>
-            </div>
-            <div class="cube-side cube-side-back">
-                <div class="block-1">
-                    <div class="block-1-back"></div>
-                    <div class="block-2-back"></div>
-                    <div class="block-3-back"></div>
-                </div>
-                <div class="block-2">
-                    <div class="block-4-back"></div>
-                    <div class="block-5-back"></div>
-                    <div class="block-6-back"></div>
-                </div>
-                <div class="block-3">
-                    <div class="block-7-back"></div>
-                    <div class="block-8-back"></div>
-                    <div class="block-9-back"></div>
-                </div>
-            </div>
-            <div class="cube-side cube-side-top">
-                <div class="block-1">
-                    <div class="block-1-top"></div>
-                    <div class="block-2-top"></div>
-                    <div class="block-3-top"></div>
-                </div>
-                <div class="block-2">
-                    <div class="block-4-top"></div>
-                    <div class="block-5-top"></div>
-                    <div class="block-6-top"></div>
-                </div>
-                <div class="block-3">
-                    <div class="block-7-top"></div>
-                    <div class="block-8-top"></div>
-                    <div class="block-9-top"></div>
-                </div>
-            </div>
-            <div class="cube-side cube-side-rigth">
-                <div class="block-1">
-                    <div class="block-1-rigth"></div>
-                    <div class="block-2-rigth"></div>
-                    <div class="block-3-rigth"></div>
-                </div>
-                <div class="block-2">
-                    <div class="block-4-rigth"></div>
-                    <div class="block-5-rigth"></div>
-                    <div class="block-6-rigth"></div>
-                </div>
-                <div class="block-3">
-                    <div class="block-7-rigth"></div>
-                    <div class="block-8-rigth"></div>
-                    <div class="block-9-rigth"></div>
-                </div>
-            </div>
-            <div class="cube-side cube-side-bottom">
-                <div class="block-1">
-                    <div class="block-1-bottom"></div>
-                    <div class="block-2-bottom"></div>
-                    <div class="block-3-bottom"></div>
-                </div>
-                <div class="block-2">
-                    <div class="block-4-bottom"></div>
-                    <div class="block-5-bottom"></div>
-                    <div class="block-6-bottom"></div>
-                </div>
-                <div class="block-3">
-                    <div class="block-7-bottom"></div>
-                    <div class="block-8-bottom"></div>
-                    <div class="block-9-bottom"></div>
-                </div>
-            </div>
-            <div class="cube-side cube-side-left">
-                <div class="block-1">
-                    <div class="block-1-left"></div>
-                    <div class="block-2-left"></div>
-                    <div class="block-3-left"></div>
-                </div>
-                <div class="block-2">
-                    <div class="block-4-left"></div>
-                    <div class="block-5-left"></div>
-                    <div class="block-6-left"></div>
-                </div>
-                <div class="block-3">
-                    <div class="block-7-left"></div>
-                    <div class="block-8-left"></div>
-                    <div class="block-9-left"></div>
-                </div>
-            </div>
+    <div class="cube">
+        <div class="top"></div>
+        <div>
+            <span style="--i:0;"></span>
+            <span style="--i:1;"></span>
+            <span style="--i:2;"></span>
+            <span style="--i:3;"></span>
         <div>
     </div>
 </body>
